Update Post “2018-03-05-test-post”

--- a/_posts/2018-03-05-test-post.md
+++ b/_posts/2018-03-05-test-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: test post
+title: this is an edited test post
 categories: nonsense
 ---
-this is a test blog post
+this is the content of an edited test blog post
